--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "@prisma/client": "^6.3.1",
     "@tanstack/react-query": "^5.66.5",
     "bcrypt": "^5.1.1",
+    "clsx": "^2.1.1",
     "firebase": "^11.3.1",
+    "framer-motion": "^12.4.5",
     "jsonwebtoken": "^9.0.2",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-rewards": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.0.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -38,7 +42,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prisma": "^6.3.1",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
