added recover password flow

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ FIREBASE_AUTH_DOMAIN="Your_Firebase_Auth_Domain"
 
 NEXTAUTH_SECRET="Your_Nextauth_Sectret"
 JWT_SECRET="Your_Jwt_Secret"
+
+EMAIL_USER="yourEmailFornodemailer@gmail.com"
+EMAIL_PASS="yourEmailKeyFornodemailer"
